<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="9dp"
        android:text="@string/label_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_register_id" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:text="@string/label_name"
        app:layout_constraintBottom_toBottomOf="@+id/et_register_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:text="@string/label_pwd1"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_register_pwd1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:text="@string/label_pwd2"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_register_pwd2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_register_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/content_id"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_register_name"
        app:layout_constraintEnd_toEndOf="@+id/et_register_name" />

    <EditText
        android:id="@+id/et_register_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:layout_marginBottom="46dp"
        android:ems="10"
        android:hint="@string/content_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_register_pwd1"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_register_pwd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="312dp"
        android:ems="10"
        android:hint="@string/label_pwd1"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/et_register_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_register_pwd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:ems="10"
        android:hint="@string/content_pwd2"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/et_register_pwd1"
        app:layout_constraintTop_toBottomOf="@+id/et_register_pwd1" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_register_pwd2" />

    <Button
        android:id="@+id/btn_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="65dp"
        android:text="@string/btn_return"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_register_pwd2" />
</androidx.constraintlayout.widget.ConstraintLayout>